src/objects/Client_Strategy__c.object
<CustomObject>
    <description>The Client Strategy object houses data around account strategy and planning related to specifIc account (client) records. These records will be created manually by end users.</description>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup relationship to account object</description>
        <inlineHelpText>The associated client for this strategy</inlineHelpText>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Strategies</relationshipLabel>
        <relationshipName>Client_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <inlineHelpText>Summary of our plan for this account</inlineHelpText>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Existing_agency_landscape__c</fullName>
        <inlineHelpText>What other agencies are engaged at this client?</inlineHelpText>
        <label>Existing agency landscape</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPI_s_Company_Initiatives__c</fullName>
        <inlineHelpText>What Key Performance Indicators are being pursued at this client? What initiatives can Mosaic help them achieve?</inlineHelpText>
        <label>KPI’s/Company Initiatives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Growth_Areas__c</fullName>
        <inlineHelpText>Growth areas for Mosaic with this client</inlineHelpText>
        <label>Key Growth Areas</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <inlineHelpText>What opportunities exist for Mosaic at this client?</inlineHelpText>
        <label>Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outlook_Overall_account_health__c</fullName>
        <inlineHelpText>What is the overall outlook for this client?</inlineHelpText>
        <label>Outlook / Overall account health</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <inlineHelpText>What are the client&apos;s key strengths in the market?</inlineHelpText>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <inlineHelpText>What threats exist to this client in the market?</inlineHelpText>
        <label>Threats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Top_Goal_1__c</fullName>
        <inlineHelpText>Client&apos;s #1 Goal</inlineHelpText>
        <label>Top Goal #1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Goal_2__c</fullName>
        <inlineHelpText>Client&apos;s #2 Goal</inlineHelpText>
        <label>Top Goal #2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Goal_3__c</fullName>
        <inlineHelpText>Client&apos;s #3 Goal</inlineHelpText>
        <label>Top Goal #3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <inlineHelpText>What are the client&apos;s key weaknesses in the market?</inlineHelpText>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <label>Client Strategy</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Client Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>